--- a/journey-mybatis-complete/pom.xml
+++ b/journey-mybatis-complete/pom.xml
@@ -20,6 +20,7 @@
         <mysql.version>8.3.0</mysql.version>
         <junit.version>5.10.2</junit.version>
         <logback.version>1.5.4</logback.version>
+        <mockito.version>5.12.0</mockito.version>
     </properties>
 
     <dependencies>
@@ -42,6 +43,14 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
 
