--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>journey-mybatis-quickstart</module>
         <module>journey-mybatis-complete</module>
         <module>journey-mybatis-configuration</module>
+        <module>journey-mybatis-bank</module>
     </modules>
 
     <properties>
